# local-llm-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FRONT_FACING_IDEAS.md  LICENSE  Makefile  OPERATORS_GUIDE.md  POST_FLIGHT_REPORT.md  POST_FLIGHT_REPORT_STAGE2.md  PROMPT_EXECUTION_OPERATORS_GUIDE.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/workflows/: ci.yml  live-ollama-smoke.yml
.prompts/: PROMPT_00_s.txt  PROMPT_01.txt  PROMPT_02.txt  PROMPT_03.txt  PROMPT_04.txt  PROMPT_05.txt  PROMPT_06.txt  PROMPT_07.txt  PROMPT_08.txt  PROMPT_09.txt  PROMPT_10.txt  PROMPT_11.txt  PROMPT_12.txt  PROMPT_13.txt  PROMPT_14.txt  PROMPT_15.txt  PROMPT_MANIFEST.md  PROMPT_STAGE2_MANIFEST.md  STAGE2_PRE_FLIGHT.md  improvements-before-finalization.txt  improvements-before-initial-run.txt
data/: rag_eval_questions.jsonl
data/corpus/: 01_what_is_rag.md  02_lab_structure.md  04_refusal_behavior.md  (+7 more)
docs/: glossary.md  ludwig_workflows.md  models.md  neural_networks_101.md  operators_guide.md  perf.md  rag_deep_dive.md
experiments/: models.yaml  rag_baseline.yaml  rag_compare_models.yaml
ludwig/: icl.yaml  prompting.yaml  tiny_finetune.yaml
schemas/: run_result_row.schema.json  run_summary.schema.json
scripts/: bootstrap_mac.sh  live_ollama_smoke.sh  release_prep.sh  run_ludwig_prompting.sh  sync_run_artifact_schemas.py  validate_run_artifacts.py  verify.sh
tests/: test_cli_parser.py  test_integration_basics.py  test_integration_edge_cases.py  test_live_ollama_smoke.py  test_rag_threshold.py  test_run_artifact_schemas.py  test_script_smoke.py  test_web_smoke.py
(+29 files in other folders)
