[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "local-llm-lab"
version = "0.1.0"
description = "Local LLM experimentation lab using Ollama"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx",
  "rich",
  "pydantic>=2",
  "orjson",
  "pyyaml>=6.0.3",
  "python-multipart",
  "langchain",
  "langchain-ollama",
  "jinja2",
  "fastapi",
  "uvicorn",
]

[project.scripts]
lab = "lab.cli:main"

[project.optional-dependencies]
ludwig = ["ludwig"]

[tool.hatch.build.targets.wheel]
packages = ["src/lab"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
